[package]
name = "simple-signal-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sst"
path = "src/main.rs"

[dependencies]
presage = { git = "https://github.com/whisperfish/presage", rev = "c363731038acf176ab6b5ee0600d7de85f8a2da8" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", rev = "c363731038acf176ab6b5ee0600d7de85f8a2da8", default-features = false }

anyhow = "1.0"
serde_json = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
directories = "6.0"
futures = "0.3"
qr2term = "0.3"
ratatui = "0.29"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
quickcheck_async = { git = "https://github.com/nytopop/quickcheck_async", rev = "76b13525ca93e0725e757f841fc6ccab8bae1913" }
libsqlite3-sys = { version = "0.36.0", git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc" }
